src/index.css
body {
  margin: 0;
  padding: 0;
  font-family: sans-serif;
  color: #252525;
}

.avatar {
  height: 40px;
  border-radius: 20px;
  margin: 10px;
  vertical-align: middle;
}

.avatar-name {
  font-weight: bold;
}

.nav-container {
;
}

.nav-links {

}

.form-container {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  height: 400px;
}

.question-form {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  height: 800px;
}

.question-form-container {
  border: thin solid black;
  width: 50%;
  height: 50%;
}
.test {
  align-content: center;
  padding: 20px;
}

.choice-card-container,
.pollcard-container,
.scorecard-container {
  border: thin solid black;
  width: 40%;
  margin: 10px;
}
.choice-card-container {
  padding: 20px;
}
.dashbord-container {
  display: flex;
}
.answered-header,
.unanswer-header {
  border: thin solid black;
  padding: 5px;
}

